fixed to work with 5.x

--- a/configfiles-5.x/1116_preprocess_bro_ssl.conf
+++ b/configfiles-5.x/1116_preprocess_bro_ssl.conf
@@ -1,7 +1,7 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/02/2018 <tyler.bennett@como.gov>
 #
 # This conf file is based on accepting logs for ssl.log from Bro systems
 filter {
@@ -65,12 +65,12 @@ filter {
     }
     if [certificate_common_name] {
       ruby {
-        code => "event['certificate_common_name_length'] = event['certificate_common_name'].length;"
+        code => "event.set('certificate_common_name_length', event.get('certificate_common_name').length)"
       }
     }
     if [issuer_common_name] {
       ruby {
-        code => "event['issuer_common_name_length'] = event['issuer_common_name'].length;"
+        code => "event.set('issier_common_name_length', event.get('issuer_common_name').length)"
       }
     }
     if [server_name] == "-" {
@@ -78,21 +78,21 @@ filter {
         remove_field => [ "server_name" ]
       }
     } else {
-      ruby {
-        code => "event['server_name_length'] = event['server_name'].length;"
-      }
+        ruby {
+          code => "event.set('server_name_length', event.get('server_name').length)"
+        }
     }
     if [certificate_chain_fuids] == "-" {
       mutate {
         remove_field => [ "certificate_chain_fuids" ]
       }
     } else {
-      ruby {
-        code => "event['certificate_chain_count'] = event['certificate_chain_fuids'].count(',') + 1;"
-      }
-      mutate {
-        convert => [ "certificate_chain_length", "integer" ]
-      }
+        ruby {
+          code => "event.set('certificate_chain_count', event.get('certificate_chain_fuids').count(',') + 1)"
+        }
+        mutate {
+          convert => [ "certificate_chain_length", "integer" ]
+        }
     }
     if [client_certificate_chain_fuids] == "-" {
       mutate {
