--- a/configfiles-5.x/1123_preprocess_bro_x509.conf
+++ b/configfiles-5.x/1123_preprocess_bro_x509.conf
@@ -1,7 +1,7 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/02/2018 <tyler.bennett@como.gov>
 #
 # This conf file is based on accepting logs for x509.log from Bro systems
 
@@ -85,12 +85,12 @@ filter {
     }
     if [certificate_common_name] {
       ruby {
-        code => "event['certificate_common_name_length'] = event['certificate_common_name'].length;"
+        code => "event.set('certificate_common_name_length' , event.get('certificate_common_name').length)"
       }
     }
     if [issuer_common_name] {
       ruby {
-        code => "event['issuer_common_name_length'] = event['issuer_common_name'].length;"
+        code => "event.set('issuer_common_name_length' , event.get('issuer_common_name').length)"
       }
     }
     if [certificate_not_valid_after] == "-" {
@@ -105,7 +105,7 @@ filter {
     }
     if [certificate_not_valid_after] and [certificate_not_valid_before] {
       ruby {
-        code => "event['certificate_number_days_valid'] = ((event['certificate_not_valid_after'] - event['certificate_not_valid_before']) / 86400).ceil;"
+        code => "event.set('certificate_number_days_valid' , ((event.get('certificate_not_valid_after') - event.get('certificate_not_valid_before')) / 86400).ceil)"
       }
       date {
         match => [ "certificate_not_valid_after", "UNIX" ]
