--- a/configfiles-5.x/8007_postprocess_http.conf
+++ b/configfiles-5.x/8007_postprocess_http.conf
@@ -1,23 +1,23 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/02/2018 <tyler.bennett@como.gov>
 
 filter {
   if [type] == "bro_http" {
     if [uri] {
       ruby {
-        code => "event['uri_length'] = event['uri'].length"
+        code => "event.set('uri_length', event.get('uri').length)"
       }
     }
     if [virtual_host] {
       ruby {
-        code => "event['virtual_host_length'] = event['virtual_host'].length"
+        code => "event.set('virtual_host_length', event.get('virtual_host').length)"
       }
     }
     if [user_agent] {
       ruby {
-        code => "event['useragent_length'] = event['useragent_host'].length"
+        code => "event.set('user_agent_length', event.get('user_agent').length)"
       }
     }
 	mutate {
