fixed these files for 5.x

--- a/configfiles-5.x/6000_bro.conf
+++ b/configfiles-5.x/6000_bro.conf
@@ -1,9 +1,10 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/02/2018 <tyler.bennett@como.gov>
 #
 # This conf file is based on accepting logs for conn.log from Bro systems
+
 filter {
   if "bro" in [tags] {
     if [duration] == "-" {
@@ -125,7 +126,7 @@ filter {
     if [original_bytes] {
       if [respond_bytes] {
         ruby {
-          code => "event['total_bytes'] = event['original_bytes'] + event['respond_bytes']"
+          code => "event.set('total_bytes', event.get('original_bytes') + event.get('respond_bytes'))"
         }
       }
     }
