--- a/configfiles-5.x/8006_postprocess_dns.conf
+++ b/configfiles-5.x/8006_postprocess_dns.conf
@@ -1,7 +1,7 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/02/2018 <tyler.bennett@como.gov>
 
 filter {
   if [type] == "bro_dns" {
@@ -15,7 +15,6 @@ filter {
       drop { }
     }
     # REPLACE test.int with your internal domain
-    if [query] and [query] !~ "\.test\.int$" {
       mutate {
         lowercase => [ "query" ]
       }
@@ -24,7 +23,7 @@ filter {
           source => "query"
         }
         ruby {
-          code => "event['query_length'] = event['query'].length"
+          code => "event.set('query_length', event.get('query').length)"
         }
         mutate {
           rename => { "[SubLog][sessionid]" => "sub_session_id" }
@@ -35,12 +34,12 @@ filter {
         }
         if [parent_domain] {
           ruby {
-            code => "event['parent_domain_length'] = event['parent_domain'].length"
+            code => "event.set('parent_domain_length', event.get('parent_domain').length)"
           }
         }
         if [subdomain] {
           ruby {
-            code => "event['subdomain_length'] = event['subdomain'].length"
+            code => "event.set('subdomain_length', event.get('subdomain').length)"
           }
         }
       }
