--- a/configfiles/6200_firewall_fortinet.conf
+++ b/configfiles/6200_firewall_fortinet.conf
@@ -1,7 +1,8 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/02/2018 <tyler.bennett@como.gov>
+# Tested with Fortigate firmware 5.6.2
 
 filter {
   if [type] == "fortinet" {
