--- a/configfiles/8006_postprocess_dns.conf
+++ b/configfiles/8006_postprocess_dns.conf
@@ -1,15 +1,10 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/10/2018 <tyler.bennett@como.gov>
 
 filter {
-  if [type] == "bro_dns" {
-    mutate {
-      replace => { "type" => "dns" }
-    }
-  }
-  if [type] == "dns" {
+  if [type] == "dns" or [type] == "bro_dns" {
     # Used for whois lookups - can create log loop
     if [query] =~ "^whois\." {
       drop { }
