--- a/configfiles/9000_output_bro.conf
+++ b/configfiles/9000_output_bro.conf
@@ -1,7 +1,7 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 01/10/2018 <tyler.bennett@como.gov>
 
 filter {
   if "bro" in [tags] and "test_data" not in [tags] {
@@ -15,6 +15,9 @@ output {
 #    stdout { codec => rubydebug }
     elasticsearch {
       index => "logstash-bro-%{+YYYY.MM.dd}"
+	  
+	  # sizing and filtering assistance
+	  #index => "logstash-${type}-%{+YYYY.MM.dd}"
     }
   }
 }
