--- a/configfiles/9000_output_bro.conf
+++ b/configfiles/9000_output_bro.conf
@@ -17,7 +17,7 @@ output {
       index => "logstash-bro-%{+YYYY.MM.dd}"
 	  
 	  # sizing and filtering assistance
-	  #index => "logstash-${type}-%{+YYYY.MM.dd}"
+	  #index => "logstash-%{type}-%{+YYYY.MM.dd}"
     }
   }
 }
