--- a/configfiles/6200_firewall_fortinet.conf
+++ b/configfiles/6200_firewall_fortinet.conf
@@ -14,9 +14,24 @@ filter {
        match => ["message", "type=%{DATA:event_type}\s+"]
        tag_on_failure => []
     }
-    grok {
-       match => ["message", "<%{DATA}>%{GREEDYDATA:kv}"]
-       tag_on_failure => []
+    if [message] =~ "url=" {
+      grok {
+        match => ["message", '<%{DATA}>%{DATA:kv1} (url="%{DATA:url}")? %{GREEDYDATA:kv2}']
+        tag_on_failure => []
+      }
+      urldecode {
+        field => [ "url" ]
+        charset => "ISO-8859-1"
+      }
+      mutate {
+        add_field => { "kv" => "%{kv1} %{kv2}"}
+        remove_field => [ "kv1", "kv2" ]
+      }
+    } else {
+      grok {
+        match => ["message", "<%{DATA}>%{GREEDYDATA:kv}"]
+        tag_on_failure => []
+      }
     }
     kv {
       source => "kv"
