--- a/grok_example.conf
+++ b/grok_example.conf
@@ -1,7 +1,7 @@
 filter {
   grok {
-    match => { "message" => ["
-      ^<%{POSINT:syslog_pri}>%{SYSLOGTIMESTAMP:syslog_timestamp} %{DATA:syslog_host} %{DATA:syslog_program}(\[%{POSINT:syslog_pid}\])?:"
+    match => { "message" => [
+      "^<%{POSINT:syslog_pri}>%{SYSLOGTIMESTAMP:syslog_timestamp} %{DATA:syslog_host} %{DATA:syslog_program}(\[%{POSINT:syslog_pid}\])?:"
       ]
     }
   }
